desktop/trp/marketingsite/wp-content/themes/sage-master/assets/styles/pages/_team.scss
.trp-team {
	p {
		margin-top: 110px;
		font-size: 20px;
		color: #40474f;
		line-height: 32px;
	}
	h2 {
		margin-top: 100px;
		margin-bottom: 80px;
		font-family: ProximaNovaLight;
		font-size: 50px;
		color: #40474f;
	}

}

.trp-team-nav {
	height: 70px;
	background-color: #40474f;
	padding-top: 25px;
	a {
		font-size: 18px;
		color: #fff;
		padding-right: 30px;
		font-family: ProximaNovaRegular;
	}
}

.trp-team-member {
	text-align: center;
	margin-bottom: 60px;
	min-height: 462px;
	@media (max-width: $screen-sm-min) {
		min-height: initial;
	}
	a {
		.trp-member-overlay {
			display: none;
			p {
				margin-top: 0;
				color: #fff;
				font-size: 25px;
				margin-bottom: 0;
			}
		}
		&:hover {
			.trp-member-overlay {
				height: 340px;
				position: absolute;
				width: 340px;
				background-color: rgba(107,200,202,0.7);
				display: block;
				border-radius: 100%;
				padding-top: 140px;
				margin-left: 5px;
			}
		}
	}
	img {
		width: 100%;
		max-width: 340px;
		-moz-border-radius: 100%;
		-webkit-border-radius: 100%;
		border-radius: 100%;
	}
	h4 {
		font-size: 25px;
		color: #53c1c0;
		margin-top: 30px;
		font-family: ProximaNovaBold;
	}
	span {
		font-size: 20px;
		color: #89929b;
		font-family: ProximaNovaLight; 
		font-style: italic;
	}
}

.trp-advisors {
	background-color: #eefefe;
	padding-bottom: 200px;
	@media (max-width: $screen-sm-min) {
		padding-bottom: 100px;
	}
	h2 {
		font-size: 50px;
		color: #40474f;
		margin-top: 140px;
		font-family: ProximaNovaLight;
		@media (max-width: $screen-sm-min) {
			margin-top: 70px;
		}
	}
	h4 {
		font-size: 25px;
		font-family: ProximaNovaBold;
		color: #53c1c0;
		margin-bottom: 40px;
		margin-top: 100px;
	}
	span p {
		font-size: 20px;
		font-family: ProximaNovaLight;
		color: #89929b;
		font-style: italic;
	}
	.trp-advisor {
		min-height: 330px;
		@media (max-width: $screen-lg-min) {
			min-height: 300px;
		}
		@media (max-width: $screen-sm-min) {
			min-height: 155px;
		}
	}
}

.trp-free-trial-container {
	height: initial;
	text-align: center;
	.trp-free-trial {
		background: #fff;
		border-radius: 100px;
		height: 58px;
		margin-bottom: 120px;
		padding-right: 4px;
		margin-top: 40px;
	}
	input[type=text] {
		border: none;
		float: left;
		margin-top: 17px;
		margin-left: 50px;
		width: 50%;
	}
	a {
		margin-top: 4px;
	}
	h2 {
		font-weight: bold;
	}
}

